Implemented - Button should allows to show inputs on a modal popup
