# internal/tiltfile/v1alpha1/types.go
@@ -460,6 +460,7 @@ func (p Plugin) uiButton(t *starlark.Thread, fn *starlark.Builtin, args starlark
 		"icon_svg?", &obj.Spec.IconSVG,
 		"disabled?", &obj.Spec.Disabled,
 		"requires_confirmation?", &obj.Spec.RequiresConfirmation,
+		"show_inputs_as_modal?", &obj.Spec.ShowInputsAsModal,
 		"inputs?", &inputs,
 	)
 	if err != nil {
